--- a/client/src/components/login/LoginReg.css
+++ b/client/src/components/login/LoginReg.css
@@ -1,4 +1,3 @@
-
 /* Login */
 
 .wrapper {
@@ -122,7 +121,5 @@
     background: linear-gradient(120deg, #2980b9, #8e44ad);
   }
   
-  
-  
-  
+  /* END Login */
   
